--- a/assets/layout/menu.xml
+++ b/assets/layout/menu.xml
@@ -1,27 +1,14 @@
 <Scene
         name="Background"
-        width="match_parent"
-        height="match_parent"
+        width="1366"
+        height="768"
         src="assets/images/home-bg.jpg">
-    <PlayerBox
-            name = "PlayerBox"
-            width = "200"
-            height = "100"
-            position = "100,100"
-            color="91,107,144"
-            opacity="0.7"
-            borderRadius="10"
-    >
-        <Image />
-        <Text
-                name = "PlayerName"
-                width = "200"
-                height = "100"
-                position = "100,100"
-                text = "zunohoang"
-        />
-        <Text />
-        <Text />
-    </PlayerBox>
 
+    <Box
+            name="Box_shape-1740306669640"
+            width="100"
+            height="100"
+            position="100,100"
+            color="255,10,10"
+            opacity="1"/>
 </Scene>
